<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">汉王云记忆</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">content description!</string>
    <string name="welcome">欢迎您使用汉王E典笔</string>
    <string name="excerpt">摘抄</string>
    <string name="recording">录音</string>
    <string name="words">生词本</string>
    <string name="translate">整句翻译</string>
    <string name="username">用户名：</string>
    <string name="password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="noAccount">没有账号</string>
    <string name="registerUsername">用&#160;&#160;户&#160;&#160;名：</string>
    <string name="registerMail">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱：</string>
    <string name="registerPassword">输入密码：</string>
    <string name="confirmPassword">确认密码：</string>
    <string name="inputName">请输入用户名</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputPasswordAgain">请再次输入密码</string>
    <string name="inputMail">请输入邮箱</string>
    <string name="search">搜索</string>
    <string name="inputTitle">请输入标题</string>
    <string name="inputContent">请输入内容</string>
    <string name="wordsShowParaphrase">点击单词显示释义</string>
    <string name="wordShow">显示单词：</string>
    <string name="originalContext">原文</string>
    <string name="translateContext">译文</string>
    <string name="recordingResultText">音频识别结果：</string>
    
    <!-- 自定义组件 -->
    <string name="pull_to_refresh_list">下拉可以刷新</string>
    <string name="release_to_refresh_list">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="leftmenu_count">统计</string>
    <string name="leftmenu_setting">设置</string>
    <string name="leftmenu_cloud">云同步</string>
    <string name="title_setting">设置</string>
    <string name="setting_item_upgrade">自动升级</string>
    <string name="setting_item_clear_buffer">清空缓存</string>
    <string name="setting_item_feedback">意见反馈</string>
    <string name="setting_item_help_manual">帮助手册</string>
    <string name="setting_item_about">关于我们</string>
    <string name="setting_item_inputmethod">输入法</string>
    <string name="title_about">关于我们</string>
    <string name="about_advertise">速录笔,有你的日子,学习生活更简单,更轻松,更便捷！</string>
    <string name="title_feedback">意见反馈</string>

    <string name="feedback_thanks">感谢您对速录笔的关注与支持，我们会认真处理您的反馈，尽快修复和完善相关功能</string>
    <string name="feedback_tip_question">问题和意见</string>
    <string name="feedback_tip_email">您的邮件</string>
    <string name="feedback_tip_inputs_question">请简要描述您的问题</string>
    <string name="feedback_tip_inputs_email">选填，用于解决问题后对您的回复</string>
    <string name="feedback_commit">提交</string>
    <string name="feedback_content_null">请完善您的反馈内容</string>
    <string name="feedback_mail_null">请填写您的邮箱</string>
    <string name="feedback_mail_addr_err">邮箱格式错误</string>
    <string name="feedback_progress">正在发送反馈意见，请稍候...</string>
    <string name="feedback_error">网络连接异常，您的反馈信息已保存，请稍后重试。</string>
    <string name="feedback_upload_done">提交成功！感谢您的宝贵意见。</string>
    <string name="title_help">帮助手册</string>
    <string name="account">账户</string>
    <string name="account_message">账户信息</string>
    <string name="myaccount">我的账户</string>
    <string name="show_account">用户帐号</string>
    <string name="nickname">名字</string>
    <string name="modify_nickname">未填写</string>
    <string name="password_safety">密码安全</string>
    <string name="modify_passwd">修改密码</string>
    <string name="third_bind">第三方绑定</string>
    <string name="third_login">第三方</string>
    <string name="loginout">退出登录</string>
    <string name="third_sina">&#160;&#160;新浪微博</string>
    <string name="third_qq">&#160;&#160;QQ</string>
    <string name="third_weixin">&#160;&#160;微信</string>
    <string name="third_unbind">未绑定</string>

    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="client_error">未安装第三方客户端,请先进行第三方客户端的安装!</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="resetpwd_reset">请输入新密码</string>
    <string name="new_passwd">新密码</string>
    <string name="ensure_new_passwd">确认新密码</string>
    <string name="reset_passwd_error">格式有误请输入6-16位字母和数字组合密码</string>
    <string name="pwd_format">6-16位数字和字母组合</string>
    <string name="modify_name">请输入您的名字</string>
    <string name="login_user">邮箱/手机</string>
    <string name="auth_code">验证码</string>
    <string name="login_pwd">密码</string>
    <string name="rgst_pwd">请设置密码，6-16位字母和数字组合</string>
    <string name="register_user">注册</string>
    <string name="login_third">----第三方登录----</string>
    <string name="login_button">登录</string>
    <string name="rgst_button">注册</string>
    <string name="rgst_email">邮箱注册</string>
    <string name="rgst_phone_user">请输入你的手机号</string>
    <string name="rgst_email_user">请输入你的常用邮箱地址</string>
    <string name="remember_pwd">忘记密码?</string>
    <string name="resetpwd_button">重设密码</string>
    <string name="resetpwd_doc">输入已注册的手机号或邮箱</string>

    <string name="ensure">确定</string>
    <string name="rmb_time">重新发送验证码(60s)</string>
    <string name="back">返回</string>
    <string name="forget_pwd">找回密码</string>
    <string name="empty_notebooklist_tips">NoteBook is empty</string>

    <string name="share_from_hanvon">来自汉王云记忆的分享</string>
    <string name="link_mess">生成连接中，请等待...</string>

</resources>
